--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,7 @@
     <color name="OnBackground">#000000</color>
     <color name="OnSurface">#000000</color>
     <color name="OnError">#FFFFFF</color>
+
+    <color name="TitleColor">#000000</color>
+    <color name="StatusBarColor">#FFFFFF</color>
 </resources>
