--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.Wishlist" parent="Theme.MaterialComponents.Light.NoActionBar">
+
+        <!-- Primary toolbar. -->
+        <item name="toolBarStyle">@style/Widget.Wishlist.Toolbar</item>
+        <item name="toolbarWithArrowButtonStyle">@style/Widget.Wishlist.Toolbar.WithArrow</item>
+        <item name="toolbarWithCloseButtonStyle">@style/Widget.Wishlist.Toolbar.WithClose</item>
+
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/Background</item>
         <item name="colorPrimaryVariant">@color/PrimaryVariant</item>
@@ -11,7 +17,7 @@
         <item name="colorOnSecondary">@color/OnSecondary</item>
         <!-- Status bar color. -->
         <item name="android:windowLightStatusBar">true</item>
-        <item name="android:statusBarColor" tools:targetApi="l">@color/Background</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/StatusBarColor</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
