--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,16 @@
         <item name="android:navigationIcon">@drawable/ic_baseline_close_24</item>
         <item name="android:title">@null</item>
     </style>
+
+    <!--    Chip-->
+    <style name="Widget.Wishlist.Chip" parent="Widget.MaterialComponents.Chip.Choice">
+        <item name="chipStrokeColor">@color/ChipStrokeColor</item>
+        <item name="strokeWidth">1dp</item>
+        <item name="chipBackgroundColor">@color/bg_filter_chip_state_list</item>
+        <item name="android:textColor">@color/text_filter_chip_state_list</item>
+        <item name="textStartPadding">8dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="chipStartPadding">6dp</item>
+        <item name="chipEndPadding">6dp</item>
+    </style>
 </resources>
