--- a/app/src/main/res/layout/fragment_buy_list.xml
+++ b/app/src/main/res/layout/fragment_buy_list.xml
@@ -4,19 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="?attr/actionBarSize"
     tools:context=".ui.buylist.BuyListFragment">
 
-    <TextView
-        android:id="@+id/text_buy_list"
-        android:layout_width="match_parent"
+    <com.google.android.material.tabs.TabLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="구매완료" />
+
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="월별소비" />
+
+    </com.google.android.material.tabs.TabLayout>
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
