--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,6 +4,7 @@
     <style name="Widget.Wishlist.Toolbar" parent="Widget.MaterialComponents.Toolbar.Primary">
         <item name="android:background">@color/Surface</item>
         <item name="android:title">@null</item>
+        <item name="android:elevation">0dp</item>
     </style>
 
     <!--    Toolbar Arrow-->
