--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/DetailsBackground"
     tools:context=".ui.views.home.details.DetailsActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -35,64 +34,61 @@
         android:layout_marginBottom="10dp"
         android:background="@drawable/button_background"
         android:text="구매하러 가기"
+        android:fontFamily="@font/nanum_square_round_r"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <ScrollView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/view"
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/item_card_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        app:cardCornerRadius="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tool_bar">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/item_card_view"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            app:cardCornerRadius="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tool_bar">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:weightSum="10">
 
-            <LinearLayout
+            <ImageView
+                android:id="@+id/image_view"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:weightSum="10">
+                android:layout_height="450dp"
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/sample_image" />
 
-                <ImageView
-                    android:id="@+id/image_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="350dp"
-                    android:scaleType="centerCrop"
-                    app:srcCompat="@drawable/sample_image" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
-                <EditText
-                    android:id="@+id/title_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@null"
-                    android:padding="15dp"
-                    android:text="오디오 테크니카 턴테이블"
-                    app:layout_constraintStart_toStartOf="@+id/image_view"
-                    app:layout_constraintTop_toBottomOf="@+id/image_view" />
+    <EditText
+        android:id="@+id/title_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:padding="15dp"
+        android:text="오디오 테크니카 턴테이블"
+        android:fontFamily="@font/nanum_square_round_r"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/item_card_view" />
 
-                <EditText
-                    android:id="@+id/price_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@null"
-                    android:paddingStart="15dp"
-                    android:paddingBottom="15dp"
-                    android:text="329,000"
-                    android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="@+id/card_view"
-                    app:layout_constraintTop_toBottomOf="@+id/title_text" />
-
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-    </ScrollView>
+    <EditText
+        android:id="@+id/price_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:paddingStart="15dp"
+        android:paddingBottom="15dp"
+        android:text="329,000"
+        android:textStyle="bold"
+        android:fontFamily="@font/nanum_square_round_r"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title_text" />
 </androidx.constraintlayout.widget.ConstraintLayout>
